<resources>
    <string name="app_name">GiftList</string>

    <!-- Generic -->
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Annuler</string>

    <!-- Navigation handler -->
    <string name="navigation_view_header_title">Liste de cadeaux</string>

    <!-- Menu -->
    <string name="disconnection_menu_item">Se déconnecter</string>

    <!-- StartActivity -->
    <string name="sign_up">Enregistrement</string>
    <string name="log_in">Authentification</string>
    <string name="not_authenticated_start_button">Lancement déconnecté</string>
    <string name="getting_started_didacticiel_title">Prise en main</string>
    <string name="add_room_didacticiel_title">Créer une salle pour n\'importe quelle occasion</string>
    <string name="add_gift_didacticiel_title">Ajouter un cadeau ou participer à un cadeau déjà proposé</string>
    <string name="not_authenticated_start_message">Attention, vous vous apprêtez à démarrer l\'application en mode déconnecté.\n\n
        Dans ce mode, il n\'est pas possible d\'enregistrer a posteriori les salles et les listes de cadeaux que vous aurez créé de cette manière.</string>
    <string name="not_authenticated_start_positive_button">Démarrer l\'application</string>
    <string name="start_dialog_username_hint_text">Identifiant</string>
    <string name="start_dialog_password_hint_text">Mot de passe</string>
    <string name="start_dialog_sign_up_positive_button">S\'enregistrer</string>
    <string name="start_dialog_empty_field_error_text">Ce champ ne doit pas être vide</string>

    <!-- Authentication Dialog -->
    <string name="authentication_dialog_loading_message">En cours de connexion&#8230;</string>
    <string name="authentication_dialog_positive_button">Se connecter</string>
    <string name="login_error">Identifiant et/ou mot de passe incorrect</string>
    <string name="login_username_empty">Username cannot be empty</string>
    <string name="login_password_empty">Password cannot be empty</string>

    <!-- RoomsActivity-->
    <string name="room_error_view_message">Aucune salle n\'est enregistrée.</string>
    <plurals name="gift_description">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="zero">%1$d de %2$d cadeau acheté.</item>
        <item quantity="one">%1$d de %2$d cadeau acheté.</item>
        <item quantity="other">%1$d de %2$d cadeaux achetés.</item>
    </plurals>
    <string name="description_medaillon_list_person">Médaillon affichant une image représentant la personne.</string>

    <!-- GiftlisActivity -->
    <string name="gift_list_title">Liste des cadeaux</string>
    <string name="gift_price_description">%1$,.2f €</string>
    <string name="gift_amount_description">Participation: %1$,.2f €</string>
    <string name="gift_remainder_description">Reste: %1$,.2f €</string>
    <string name="gift_list_detail_amount_description">%1$,.2f €</string>
    <string name="gift_error_view_message">Aucun cadeau n\'a été proposé pour cette salle.</string>
    <string name="gift_list_leave_room_menu_item">Quitter la salle</string>
    <string name="gift_list_invite_user_menu_item">Inviter un utilisateur</string>
    <string name="gift_list_empty_field_error_text">Ce champ ne doit pas être vide</string>
    <string name="gift_list_dialog_positive_button">Inviter</string>
    <string name="leave_room_dialog_message">Voulez-vous quitter cette salle ? Vous ne serez plus en mesure d\'y participer de nouveau à moins d\'y être invité.</string>
    <string name="gift_list_medaillon_description">Médaillon affichant une image représentant le cadeau.</string>
    <string name="gift_list_card_content_edit_button">Participer</string>
    <string name="gift_list_card_content_more_button">Voir plus</string>

    <!-- Add Room -->
    <string name="add_room_title">Création d\'une nouvelle salle</string>
    <string name="add_room_create_button_text">Créer la salle</string>
    <string name="add_room_name_hint_text">Nom de la salle</string>
    <string name="add_room_occasion_hint_text">Occasion</string>
    <string name="add_room_empty_field_error_text">Ce champ ne doit pas être vide</string>

    <!-- Add Gift -->
    <string name="add_gift_title">Ajout d\'un nouveau cadeau</string>
    <string name="add_gift_add_image_button_text">Ajouter une image</string>
    <string name="add_gift_name_hint_text">Nom du cadeau</string>
    <string name="add_gift_price_hint_text">Prix</string>
    <string name="add_gift_amount_hint_text">Montant affecté</string>
    <string name="add_gift_description_hint_text">Description</string>
    <string name="add_gift_add_image_title_dialog">Ajouter une image</string>
    <string name="add_gift_add_image_select_gallery_text">Sélectionner une image dans la gallerie</string>
    <string name="add_gift_add_image_take_camera_picture_text">Prendre une photographie</string>
    <string name="add_gift_empty_field_error_text">Ce champ ne doit pas être vide</string>
    <string name="add_gift_nan_error_text">Ce champ doit être un chiffre valide</string>
    <string name="add_gift_menu_item">Ajouter le cadeau</string>

    <!-- Add User -->
    <string name="add_user_title">Invitation dans la salle</string>
    <string name="add_user_menu_item">Inviter les utilisateurs</string>
    <string name="add_user_error_view_message">Aucun contact n\'a installé l\'application de gestion de listes de cadeaux.</string>
    <string name="description_medaillon_list_contacts">Médaillon affichant une image représentant le contact.</string>

    <!-- Gift Detail -->
    <string name="gift_detail_title">Détail du cadeau</string>
    <string name="gift_detail_amount_hint_text">Montant de la participation</string>
    <string name="gift_detail_description_hint_text">Description</string>
    <string name="gift_detail_modify_button_text">Modifier</string>
    <string name="gift_detail_nan_error_text">Ce champ doit être un chiffre valide</string>
    <string name="gift_detail_too_high_error_text">Votre participation ne peut dépasser le reste du cadeau qui est de %1$,.2f €</string>

    <!-- Invite Room -->
    <string name="invite_room_name_room_text">Bienvenue dans %1$s</string>
    <string name="invite_room_accept_button">Accepter</string>
</resources>
