<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_progress_bar" />

    <android.support.v4.view.ViewPager
        android:id="@+id/didacticiel_pager"
        tools:background="#330"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#c16f12">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/didacticiel_sign_up"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sign_up" />

        <View
            android:layout_gravity="center"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@android:color/black"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/didacticiel_log_in"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/log_in" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#c16f12">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/didacticiel_not_authenticated_start"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/not_authenticated_start_button" />
    </LinearLayout>
</LinearLayout>